# SyGuSML

./: .gitignore  .merlin  Dockerfile  LICENSE  Makefile  README.md  SyGuSML.docdir  SyGuSML.odocl  SyGuSML.opam  parser.mly  test.ml
benchmarks/: ex4  ex5  example1  example2  example2.1  example3  example4  example5  example6  example7  handmade  handmadeOutput.ml
doc/: Readme.md
doc/method/: Readme.md
doc/synlogic/: Readme.md
docs/: Ast.html  Candidates.html  Cost.html  FunctionIngredients.html  IntermediateTypes.NonTerminal.html  IntermediateTypes.TransitionMap.html  IntermediateTypes.html  Io.html  ListMethods.html  Preprocessor.html  PrintMethods.html  Search.Heap.html  Search.OrderedType.html  Search.WorklistBFS.html  Search.html  Solver.html  Stringfier.html  Terms.html  Transformer.html  Verifier.html  Z3solver.html  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Ast.html  type_Candidates.html  type_Cost.html  type_FunctionIngredients.html  type_IntermediateTypes.NonTerminal.html  type_IntermediateTypes.TransitionMap.html  type_IntermediateTypes.html  (+14 more)
src/: ast.ml  lexer.mll  main.ml  parser.mly  search.ml  solver.ml  test.ml  verifier.ml
src/chunk/: cost.ml  functionIngredients.ml  main.ml  search.ml  solver.ml  stringfier.ml  terms.ml  typeMethods.ml  (+1 more)
test/: ex2  ex3  ex6  parse_test.ml  testBenchmarks.ml
z3test/: z3ex1.ml  z3ex2.ml  z3test.md  z3use.ml
(+806 files in other folders)
