opam-version: "2.0"
name: "SyGuSML"
version: "0.1"
synopsis: "Sygus language function automatic synthesis base tool"
description: """
A project for competition at https://sygus.org/
To synthesize function with the sygus language standard version 2.0
"""
maintainer: "hongjisung <rhfktj@gmail.com>"
authors: "hongjisung <rhfktj@gmail.com>"
license: "MIT"
homepage: "https://github.com/hongjisung/SyGuSML"
bug-reports: "https://github.com/hongjisung/SyGuSML/issues"
dev-repo: "git+https://github.com/hongjisung/SyGuSML.git"
depends: [
    "ocaml" {>= "4.07.0"}
    "ocamlbuild" {>= "0.14.0"}
    "batteries" {>= "2.9.0"}
    "z3" {>= "4.8.4"}
    "menhir" {>= "20181113"}
    "core"
]
build: [
  [make "all"]
]
remove: [
  [make "clean"]
]
install: [
  [echo "Build complete."]
]
